--- a/Google_MAP_Solution_Whole.ipynb
+++ b/Google_MAP_Solution_Whole.ipynb
@@ -816,9 +816,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "incidents_sample.rename(columns = {'time':'hist_min_time (in seconds)', 'google_time': 'google_time (in seconds)'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -831,12 +843,12 @@
        "      <th></th>\n",
        "      <th>inci_no</th>\n",
        "      <th>date</th>\n",
-       "      <th>time</th>\n",
+       "      <th>hist_min_time (in seconds)</th>\n",
        "      <th>zone</th>\n",
        "      <th>station</th>\n",
        "      <th>address</th>\n",
        "      <th>google_station</th>\n",
-       "      <th>google_time</th>\n",
+       "      <th>google_time (in seconds)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1395,57 +1407,57 @@
        "</div>"
       ],
       "text/plain": [
-       "       inci_no        date  time zone station  \\\n",
-       "0   00-0046003  12/16/2011   169   2F      02   \n",
-       "1   11-0000002  01/01/2011   489  20F      20   \n",
-       "2   11-0000003  01/01/2011   216   9C      09   \n",
-       "3   11-0000004  01/01/2011   376   8E      08   \n",
-       "4   11-0000005  01/01/2011     2  22C      22   \n",
-       "5   11-0000009  01/01/2011   326   1B      01   \n",
-       "6   11-0000010  01/01/2011   235  24C      24   \n",
-       "7   11-0000011  01/01/2011   153   6B      06   \n",
-       "8   11-0000012  01/01/2011   326   3B      03   \n",
-       "9   11-0000014  01/01/2011   439  25B      25   \n",
-       "10  11-0000015  01/01/2011   274  13H      13   \n",
-       "11  11-0000016  01/01/2011   413   1C      01   \n",
-       "12  11-0000017  01/01/2011   214  11A      11   \n",
-       "13  11-0000018  01/01/2011   108   5B      05   \n",
-       "14  11-0000021  01/01/2011   198  19A      19   \n",
-       "15  11-0000022  01/01/2011   477   7D      07   \n",
-       "16  11-0000024  01/01/2011    99   9B      09   \n",
-       "17  11-0000025  01/01/2011   324  13D      13   \n",
-       "18  11-0000026  01/01/2011   112  26E      26   \n",
-       "19  11-0000027  01/01/2011   152   1C      01   \n",
-       "20  11-0000029  01/01/2011   554   5B      05   \n",
-       "21  11-0000032  01/01/2011   446  23F      23   \n",
-       "22  11-0000033  01/01/2011   317  12F      12   \n",
-       "23  11-0000035  01/01/2011   260   8C      08   \n",
-       "24  11-0000036  01/01/2011   348   7B      07   \n",
-       "25  11-0000037  01/01/2011   142  22F      22   \n",
-       "26  11-0000038  01/01/2011   258   5B      05   \n",
-       "27  11-0000039  01/01/2011   173  10C      10   \n",
-       "28  11-0000040  01/01/2011   967   2B      02   \n",
-       "29  11-0000041  01/01/2011   658  24G      24   \n",
-       "30  11-0000043  01/01/2011   314   3B      03   \n",
-       "31  11-0000044  01/01/2011  1239  26C      26   \n",
-       "32  11-0000045  01/01/2011   406  26E      26   \n",
-       "33  11-0000046  01/01/2011   262  18E      18   \n",
-       "34  11-0000047  01/01/2011   775  19C      19   \n",
-       "35  11-0000048  01/01/2011   399  22D      22   \n",
-       "36  11-0000049  01/01/2011   509  23G      23   \n",
-       "37  11-0000051  01/01/2011   332  55D     MF5   \n",
-       "38  11-0000053  01/01/2011   309  11H      11   \n",
-       "39  11-0000054  01/01/2011   461   9C      09   \n",
-       "40  11-0000055  01/01/2011   292  12B      12   \n",
-       "41  11-0000056  01/01/2011   413  12E      12   \n",
-       "42  11-0000057  01/01/2011   303  22A      22   \n",
-       "43  11-0000058  01/01/2011     6   3E      21   \n",
-       "44  11-0000060  01/01/2011   243  12F      12   \n",
-       "45  11-0000061  01/01/2011    47   1C      01   \n",
-       "46  11-0000064  01/01/2011  1008  19A      19   \n",
-       "47  11-0000065  01/01/2011   517  19C      19   \n",
-       "48  11-0000066  01/01/2011   188  22F      22   \n",
-       "49  11-0000067  01/01/2011   228   7B      07   \n",
+       "       inci_no        date  hist_min_time (in seconds) zone station  \\\n",
+       "0   00-0046003  12/16/2011                         169   2F      02   \n",
+       "1   11-0000002  01/01/2011                         489  20F      20   \n",
+       "2   11-0000003  01/01/2011                         216   9C      09   \n",
+       "3   11-0000004  01/01/2011                         376   8E      08   \n",
+       "4   11-0000005  01/01/2011                           2  22C      22   \n",
+       "5   11-0000009  01/01/2011                         326   1B      01   \n",
+       "6   11-0000010  01/01/2011                         235  24C      24   \n",
+       "7   11-0000011  01/01/2011                         153   6B      06   \n",
+       "8   11-0000012  01/01/2011                         326   3B      03   \n",
+       "9   11-0000014  01/01/2011                         439  25B      25   \n",
+       "10  11-0000015  01/01/2011                         274  13H      13   \n",
+       "11  11-0000016  01/01/2011                         413   1C      01   \n",
+       "12  11-0000017  01/01/2011                         214  11A      11   \n",
+       "13  11-0000018  01/01/2011                         108   5B      05   \n",
+       "14  11-0000021  01/01/2011                         198  19A      19   \n",
+       "15  11-0000022  01/01/2011                         477   7D      07   \n",
+       "16  11-0000024  01/01/2011                          99   9B      09   \n",
+       "17  11-0000025  01/01/2011                         324  13D      13   \n",
+       "18  11-0000026  01/01/2011                         112  26E      26   \n",
+       "19  11-0000027  01/01/2011                         152   1C      01   \n",
+       "20  11-0000029  01/01/2011                         554   5B      05   \n",
+       "21  11-0000032  01/01/2011                         446  23F      23   \n",
+       "22  11-0000033  01/01/2011                         317  12F      12   \n",
+       "23  11-0000035  01/01/2011                         260   8C      08   \n",
+       "24  11-0000036  01/01/2011                         348   7B      07   \n",
+       "25  11-0000037  01/01/2011                         142  22F      22   \n",
+       "26  11-0000038  01/01/2011                         258   5B      05   \n",
+       "27  11-0000039  01/01/2011                         173  10C      10   \n",
+       "28  11-0000040  01/01/2011                         967   2B      02   \n",
+       "29  11-0000041  01/01/2011                         658  24G      24   \n",
+       "30  11-0000043  01/01/2011                         314   3B      03   \n",
+       "31  11-0000044  01/01/2011                        1239  26C      26   \n",
+       "32  11-0000045  01/01/2011                         406  26E      26   \n",
+       "33  11-0000046  01/01/2011                         262  18E      18   \n",
+       "34  11-0000047  01/01/2011                         775  19C      19   \n",
+       "35  11-0000048  01/01/2011                         399  22D      22   \n",
+       "36  11-0000049  01/01/2011                         509  23G      23   \n",
+       "37  11-0000051  01/01/2011                         332  55D     MF5   \n",
+       "38  11-0000053  01/01/2011                         309  11H      11   \n",
+       "39  11-0000054  01/01/2011                         461   9C      09   \n",
+       "40  11-0000055  01/01/2011                         292  12B      12   \n",
+       "41  11-0000056  01/01/2011                         413  12E      12   \n",
+       "42  11-0000057  01/01/2011                         303  22A      22   \n",
+       "43  11-0000058  01/01/2011                           6   3E      21   \n",
+       "44  11-0000060  01/01/2011                         243  12F      12   \n",
+       "45  11-0000061  01/01/2011                          47   1C      01   \n",
+       "46  11-0000064  01/01/2011                        1008  19A      19   \n",
+       "47  11-0000065  01/01/2011                         517  19C      19   \n",
+       "48  11-0000066  01/01/2011                         188  22F      22   \n",
+       "49  11-0000067  01/01/2011                         228   7B      07   \n",
        "\n",
        "                                              address google_station  \\\n",
        "0                 274 Dunn AVE SE, MARIETTA GA, 30060             02   \n",
@@ -1499,60 +1511,60 @@
        "48                 1920 CLAY RD SW, AUSTELL GA, 30106             22   \n",
        "49                1608 HURT RD SW, MARIETTA GA, 30007             07   \n",
        "\n",
-       "    google_time  \n",
-       "0           295  \n",
-       "1           342  \n",
-       "2           470  \n",
-       "3           598  \n",
-       "4           150  \n",
-       "5           199  \n",
-       "6           224  \n",
-       "7           112  \n",
-       "8           322  \n",
-       "9           268  \n",
-       "10          341  \n",
-       "11          213  \n",
-       "12          113  \n",
-       "13           28  \n",
-       "14          310  \n",
-       "15          387  \n",
-       "16          384  \n",
-       "17          359  \n",
-       "18          454  \n",
-       "19          228  \n",
-       "20          501  \n",
-       "21          232  \n",
-       "22          271  \n",
-       "23          330  \n",
-       "24          350  \n",
-       "25           73  \n",
-       "26          469  \n",
-       "27          114  \n",
-       "28          201  \n",
-       "29          571  \n",
-       "30          287  \n",
-       "31          428  \n",
-       "32          396  \n",
-       "33          234  \n",
-       "34          210  \n",
-       "35          312  \n",
-       "36          253  \n",
-       "37          574  \n",
-       "38          269  \n",
-       "39          303  \n",
-       "40          259  \n",
-       "41          287  \n",
-       "42          275  \n",
-       "43          209  \n",
-       "44          271  \n",
-       "45          209  \n",
-       "46          310  \n",
-       "47          251  \n",
-       "48          110  \n",
-       "49          245  "
+       "    google_time (in seconds)  \n",
+       "0                        295  \n",
+       "1                        342  \n",
+       "2                        470  \n",
+       "3                        598  \n",
+       "4                        150  \n",
+       "5                        199  \n",
+       "6                        224  \n",
+       "7                        112  \n",
+       "8                        322  \n",
+       "9                        268  \n",
+       "10                       341  \n",
+       "11                       213  \n",
+       "12                       113  \n",
+       "13                        28  \n",
+       "14                       310  \n",
+       "15                       387  \n",
+       "16                       384  \n",
+       "17                       359  \n",
+       "18                       454  \n",
+       "19                       228  \n",
+       "20                       501  \n",
+       "21                       232  \n",
+       "22                       271  \n",
+       "23                       330  \n",
+       "24                       350  \n",
+       "25                        73  \n",
+       "26                       469  \n",
+       "27                       114  \n",
+       "28                       201  \n",
+       "29                       571  \n",
+       "30                       287  \n",
+       "31                       428  \n",
+       "32                       396  \n",
+       "33                       234  \n",
+       "34                       210  \n",
+       "35                       312  \n",
+       "36                       253  \n",
+       "37                       574  \n",
+       "38                       269  \n",
+       "39                       303  \n",
+       "40                       259  \n",
+       "41                       287  \n",
+       "42                       275  \n",
+       "43                       209  \n",
+       "44                       271  \n",
+       "45                       209  \n",
+       "46                       310  \n",
+       "47                       251  \n",
+       "48                       110  \n",
+       "49                       245  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
